@@ -1,3 +1,8 @@
+2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* semi-setup.el: Set up for previewing
+	application/x-pkcs7-signature part.
+
 2014-02-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-edit.el (mime-edit-normalize-eol-crlf): New CCL program.
